--- a/pages/time_schedule.tex
+++ b/pages/time_schedule.tex
@@ -10,34 +10,16 @@
 \pagenumbering{arabic}
 \renewcommand*{\thepage}{B-\arabic{page}}
 
-\section{Zimný semester}
+\section{Winter semester}
 
 \begin{tabular}{|l||l|}
 \hline
-1\textsuperscript{st}-4\textsuperscript{th} week    & Consultations \& finding related research  \\
+1\textsuperscript{st}-4\textsuperscript{th} week    & Exploring ZK ecosystem and finding suitable ZK theme \\
 \hline
-5\textsuperscript{th}-6\textsuperscript{th} week    & Working on the Introduction and Analysis chapters  \\
+5\textsuperscript{th}-8\textsuperscript{th} week    & Researching ZK-EVM, ZK-Rollups, Stealth Addresses \\
 \hline
-7\textsuperscript{th} week                          & Consultations  \\
+9\textsuperscript{th}-11\textsuperscript{th} week   & Researching Stealth Addresses with ZKP scheme \\
 \hline
-8\textsuperscript{th}-10\textsuperscript{th} week   & Working on the Analysis chapters  \\
-\hline
-11\textsuperscript{th}-12\textsuperscript{th} week  & Working on the Solution proposal chapter \\
-\hline
-\end{tabular}
-
-\section{Letný semester}
-
-\begin{tabular}{|l||l|}
-\hline
-1\textsuperscript{st}-2\textsuperscript{nd} week    & Consultations \& designing API specification  \\
-\hline
-3\textsuperscript{rd}-6\textsuperscript{th} week    & Consultations \& implementation of back-end  \\
-\hline
-7\textsuperscript{th}-9\textsuperscript{th} week    & Implementation of server  \\
-\hline
-10\textsuperscript{th} week                         & Consultations \& implementation of front-end  \\
-\hline
-11\textsuperscript{th}-12\textsuperscript{th} week  & Finishing documentation \& solution testing  \\
+12\textsuperscript{th}-13\textsuperscript{th} week  & Writing Analysis and Solution design \\
 \hline
 \end{tabular}
