--- a/content/introduction.tex
+++ b/content/introduction.tex
@@ -29,7 +29,7 @@ be transferred without revealing the recipient's identity and making
 it difficult to link transactions to specific individuals.
 
 Stealth addresses allow a sender (Alice) to transfer assets to a receiver (Bob) without
-publicly revealing the Bob's identity. To achieve this, Bob
+publicly revealing Bob's identity. To achieve this, Bob
 must first provide a public meta stealth address generation data. This data
 has different structure based on the underlying stealth address generation
 schema. From this data Alice computes a new stealth address that only Bob can
