--- a/pages/abbreviations.tex
+++ b/pages/abbreviations.tex
@@ -12,6 +12,7 @@
 \begin{tabular}{ >{\bfseries}m{2cm} m{10cm} }
 	AC  & Arithmetic Circuit       	\\
 	EVM & Ethereum Virtual Machine 	\\
+	SNARK & Succinct Non-interactive Argument of Knowledge \\
 	R1CS & Rank-1 Constraint System \\
 	ZK  & Zero Knowledge           	\\
 	ZKP & Zero Knowledge Proof
