--- a/pages/annotation.tex
+++ b/pages/annotation.tex
@@ -27,17 +27,17 @@ Bakalárska práca skúma aplikáciu dôkazov s nulovým vedomím (ZKPs) v
 blockchaine. Dôkazy s nulovým vedomím sú kryptografická metóda, ktorá
 umožňuje overenie dát bez odhalenia samotných dát, čo je ideálne pre bezpečné
 a súkromné aplikácie v blockchainoch. Táto práca je zameraná na návrh
-a implementáciu konceptu schémy tajne adresy s použitím ZKPs. Táto schéma
+a implementáciu konceptu schémy tajných adries s použitím ZKPs. Táto schéma
 umožňuje odosielateľom odvodiť tajnú adresu z verejných údajov príjemcu.
 Iba príjemca má kontrolu nad touto adresou, a zaroveň neodhaľuje žiadne informácie
 o tom, kto príjemca je.
 
 Výskum zahŕňa analýzu kryptografických princípov za ZKPs, nasledovanú
-vysvetlením návrhu schémy tajne adresy a jej integráciou do blockchainu Ethereum.
+vysvetlením návrhu schémy tajných adries a jej integráciou do blockchainu Ethereum.
 
 Táto práca prispieva do oblasti ukázaním, ako možno využiť ZKPs v blockchaine
 na riešenie problémov súkromia, ponúkajúc riešenie vo forme konceptuálnej
-implementácie schémy tajne adresy s použitím ZKPs.
+implementácie schémy tajných adries s použitím ZKPs.
 
 \newpage{}\thispagestyle{empty}\medskip{}
 
@@ -79,7 +79,7 @@ control over this address, yet it does not leak any information about who the
 recipient is.
 
 The research includes an analysis of the cryptographic principles behind
-ZKPs, followed by a explanation of the Stealth Address scheme's design and
+ZKPs, followed by an explanation of the Stealth Address scheme's design and
 its integration into a an Ethereum blockchain.
 
 This thesis contributes to the field by showcasing how ZKPs can be utilized
