--- a/values.tex
+++ b/values.tex
@@ -16,7 +16,7 @@
 \newcommand{\FIITthesis}[0] {Bachelor's thesis}
 \newcommand{\FIITthesisSK}[0] {Bakalárska práca}
 \newcommand{\FIITtitle}[0] {Practical usage of Zero-knowledge in different use-cases in blockchains}
-\newcommand{\FIITtitleSK}[0] {Velmi dolezity projekt}
+\newcommand{\FIITtitleSK}[0] {Praktické využitie dôkazov s nulovým vedomím v rôznych prípadoch použitia v blockchainoch}
 \newcommand{\FIITauthor}[0] {Lukáš Častven}
 \newcommand{\FIITsupervisor}[0] {Ing. Kristián Košťál PhD.}
 \newcommand{\FIITevidenceNumber}[0] {FIIT-16768-116160}
