--- a/main.tex
+++ b/main.tex
@@ -83,13 +83,8 @@
     \include{content/design}
     \emptypage
 
-    % \include{content/chapter4}
-    % \emptypage
-    %
-    % \include{content/chapter5}
-    % \emptypage
-    %
-    % \include{content/chapter6}
+    \include{content/future}
+    \emptypage
 
     \ifx\FIITlagEN\undefined
     \else
