--- a/pages/abbreviations.tex
+++ b/pages/abbreviations.tex
@@ -11,6 +11,7 @@
 
 \begin{tabular}{ >{\bfseries}m{2cm} m{10cm} }
 	AC  & Arithmetic Circuit       	\\
+	ERC & Ethereum Request for Comments \\
 	EVM & Ethereum Virtual Machine 	\\
 	SNARK & Succinct Non-interactive Argument of Knowledge \\
 	R1CS & Rank-1 Constraint System \\
