--- a/bibliography.bib
+++ b/bibliography.bib
@@ -121,22 +121,6 @@
 	note 			= {[Accessed 25-12-2023]},
 }
 
-@misc{youtubeMOOCLecture1,
-  author       = {},
-  title        = {{Z}{K}{P} {M}{O}{O}{C} {L}ecture 1: {I}ntroduction and {H}istory of {Z}{K}{P} --- youtube.com},
-  howpublished = {\url{https://www.youtube.com/watch?v=uchjTIlPzFo&list=PLS01nW3Rtgor_yJmQsGBZAg5XM4TSGpPs}},
-  year         = {},
-  note         = {[Accessed 16-12-2023]}
-}
-
-@misc{youtuMOOCLecture2,
-  author       = {},
-  title        = {{Z}{K}{P} {M}{O}{O}{C} {L}ecture 2: {O}verview of {M}odern {S}{N}{A}{R}{K} {C}onstructions --- youtube.com},
-  howpublished = {\url{https://youtu.be/bGEXYpt3sj0?si=WionmSWqXZdgi9lM}},
-  year         = {},
-  note         = {[Accessed 16-12-2023]}
-}
-
 @misc{ToddStealthAddresses,
 	author 			= {},
 	title 			= { [{B}itcoin-development] {S}tealth {A}ddresses  --- lists.linuxfoundation.org},
@@ -162,4 +146,71 @@
   author = {Wang,  Xin and Lin,  Li and Wang,  Yao},
   year = {2023},
   month = jun 
+}
+
+@inbook{Groth16,
+  title 	= {On the Size of Pairing-Based Non-interactive Arguments},
+  ISBN 		= {9783662498965},
+  ISSN 		= {1611-3349},
+  url 		= {http://dx.doi.org/10.1007/978-3-662-49896-5_11},
+  DOI 		= {10.1007/978-3-662-49896-5_11},
+  booktitle = {Lecture Notes in Computer Science},
+  publisher = {Springer Berlin Heidelberg},
+  author 	= {Groth,  Jens},
+  year 		= {2016},
+  pages 	= {305–326}
+}
+
+@article{Shamir1992,
+  title 	= {IP = PSPACE},
+  volume 	= {39},
+  ISSN 		= {1557-735X},
+  url 		= {http://dx.doi.org/10.1145/146585.146609},
+  DOI 		= {10.1145/146585.146609},
+  number 	= {4},
+  journal 	= {Journal of the ACM},
+  publisher = {Association for Computing Machinery (ACM)},
+  author 	= {Shamir,  Adi},
+  year 		= {1992},
+  month 	= oct,
+  pages 	= {869–877}
+}
+
+@article{Lund1992,
+  title 	= {Algebraic methods for interactive proof systems},
+  volume 	= {39},
+  ISSN 		= {1557-735X},
+  url 		= {http://dx.doi.org/10.1145/146585.146605},
+  DOI 		= {10.1145/146585.146605},
+  number 	= {4},
+  journal 	= {Journal of the ACM},
+  publisher	= {Association for Computing Machinery (ACM)},
+  author	= {Lund,  Carsten and Fortnow,  Lance and Karloff,  Howard and Nisan,  Noam},
+  year 		= {1992},
+  month 	= oct,
+  pages 	= {859–868}
+}
+
+@misc{youtubeMOOCLecture1,
+  author       = {},
+  title        = {{Z}{K}{P} {M}{O}{O}{C} {L}ecture 1: {I}ntroduction and {H}istory of {Z}{K}{P} --- youtube.com},
+  howpublished = {\url{https://www.youtube.com/watch?v=uchjTIlPzFo&list=PLS01nW3Rtgor_yJmQsGBZAg5XM4TSGpPs}},
+  year         = {},
+  note         = {[Accessed 16-12-2023]}
+}
+
+@misc{youtuMOOCLecture2,
+  author       = {},
+  title        = {{Z}{K}{P} {M}{O}{O}{C} {L}ecture 2: {O}verview of {M}odern {S}{N}{A}{R}{K} {C}onstructions --- youtube.com},
+  howpublished = {\url{https://youtu.be/bGEXYpt3sj0?si=WionmSWqXZdgi9lM}},
+  year         = {},
+  note         = {[Accessed 16-12-2023]}
+}
+
+@misc{youtuMOOCLecture3,
+	author = {},
+	title = {{Z}{K}{P} {M}{O}{O}{C} {L}ecture 3: {P}rogramming {Z}{K}{P}s --- youtu.be},
+	howpublished = {\url{https://youtu.be/UpRSaG6iuks?si=CeuQSD6N8PslfNJa}},
+	year = {},
+	note = {[Accessed 02-01-2024]},
 }
