--- a/pages/time_schedule.tex
+++ b/pages/time_schedule.tex
@@ -23,3 +23,20 @@
 12\textsuperscript{th}-13\textsuperscript{th} week  & Writing Analysis and Solution design \\
 \hline
 \end{tabular}
+
+\section{Summer semester}
+\begin{tabular}{|l||l|}
+\hline
+1\textsuperscript{st}-2\textsuperscript{nd} week    & Learning CIRCOM  \\
+\hline
+3\textsuperscript{rd}-4\textsuperscript{th} week    & Implementing ZKP with CIRCOM  \\
+\hline
+5\textsuperscript{th}-7\textsuperscript{th} week    & Implementing smart contracts in Solidity  \\
+\hline
+8\textsuperscript{th}-9\textsuperscript{th} week    & Implementing CLI experimentation wallet  \\
+\hline
+10\textsuperscript{th}-11\textsuperscript{th} week  & Solution testing  \\
+\hline
+12\textsuperscript{th}-13\textsuperscript{th} week  & Revision of final document  \\
+\hline
+\end{tabular}
