Informal proof of security

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -214,3 +214,11 @@
 	year = {},
 	note = {[Accessed 02-01-2024]},
 }
+
+@misc{bitcoinSecp256k1Bitcoin,
+	author = {},
+	title = {{S}ecp256k1 - {B}itcoin {W}iki --- en.bitcoin.it},
+	howpublished = {\url{https://en.bitcoin.it/wiki/Secp256k1}},
+	year = {},
+	note = {[Accessed 25-02-2024]},
+}
