--- a/docs/main.tex
+++ b/docs/main.tex
@@ -76,6 +76,8 @@
 
     \include{content/design}
 
+    \include{content/proof}
+
     \include{content/conclusion}
 
     % \include{content/future}
