--- a/docs/iitsrc/main.tex
+++ b/docs/iitsrc/main.tex
@@ -436,19 +436,55 @@
     he will be sending transaction, only can create create a valid proof and thus
     interact with the wallet.
 
-\section{Implementation and Evaluation}
+\section{Implementation}
 
-\section{Discussion}
-The results of the training of Machine Learning models signify a relationship between OHLCV price data of a cryptocurrency pair, traded volume, percentage change, and the occurrence of exploitable arbitrage. When considering the differences between individual Machine Learning models, the best results were obtained from Random Forest, but being aware of the potential overfitting and thus preferring a 5-minute time interval, as a 1-minute interval is prone to learning the dataset by heart. The main difference was identified between the considered cryptocurrency pairs. The more volatile ones are much harder to predict regardless of the considered time interval. As Figure \ref{fig:visualize_prices} shows, the pair ETHUSDT is much more stable for the selected time range of the dataset, resulting in significantly better results for all considered metrics for the implemented models. On the other hand, less volatile cryptocurrencies create fewer arbitrage opportunities, resulting in lower available profit. When all combined, Random Forest for a 5-minute time interval and trained on the ETHUSDT cryptocurrency pair leads to the best evaluation with the accuracy of $0.985$, precision of $0.635$, recall of $0.836$, and an F1 score of $0.722$.
+    The implementation of this study is separated into 3 modules, module for the
+    circuit which will compute ZKP, another one for smart contracts needed to implement
+    stealth wallet with ZKP stealth address schema, and module with a web app used
+    to interact with the stealth wallets. In this section different terminology
+    is used, instead of Bob, owner is used. And instead of Alice sender is used.
 
-The study focused on the integration of Machine Learning algorithms into an arbitrage trading strategy executed between cryptocurrency exchanges. From all the models described above, Random Forest performed the best when used for a 5-minute time interval in the dataset. When integrated into a real trading strategy, the approaches with and without the inclusion of the Machine Learning model were compared, resulting in a profit of $32.11$\% without and $0.455$\% with the Machine Learning model. Although these results were obtained during different time ranges, both numbers support the profitable nature of the modifications to the implemented arbitrage bot.
+    The implementation is only a proof of concept, not a full featured wallet.
+    The sender's part is the same as described until now. The owner however,
+    can only withdraw all funds from the wallet into another address. This does
+    not detract from demonstrating the core concept of a ZKP stealth address schema.
+    Fractional withdrawals, ERC20 token transfers, transaction proxying and other wallet
+    features can be implemented in future work.
 
-In comparison with related work, the obtained results were similar in some aspects but different in others. Equally, to T. G. Fischer et al. \cite{b5}, Random Forest outperformed Logistic Regression; however, with datasets consisting of nearly the same price data, it thrived better with a 5-minute interval in comparison to the 1-minute interval from the related work. Similarly, Madan et al. \cite{b23} considered Random Forest to be one of the more successful models together with Logistic Regression, whose results were not that influential in this study. This difference could be explained by the diametrically different features and time intervals considered. In general, it is evident that Random Forest could reflect the price features gathered in the datasets with the best results measured by various Machine Learning metrics.
+    \subsection{Circuits}
+
+        Circuits for proving and verifying ZKPs are written in Circom 2\cite{circom}.
+        Private inputs to this circuit are
+        \begin{enumerate}
+            \item owner's secret value,
+            \item sender's secret value,
+            \item and the withdrawee address.
+        \end{enumerate}
+
+        And public inputs, supplied by the stealth wallet are
+        \begin{enumerate}
+            \item code that was submitted by sender on contract creation,
+            \item and the transaction sender.
+        \end{enumerate}
+
+        TODO groth16, trusted setup
+
+    \subsection{Smart contracts}
+
+        There are four smart contracts implemented. A meta stealth address
+        registry which holds meta stealth addresses. A ephemeral key registry
+        which holds the ephemeral keys. A verifier of previously mentioned
+        circuit. And contract for the stealth wallet.
+
+        Owners submit their meta stealth addresses to meta stealth address registry,
+        and senders query it for them. To the ephemeral key registry senders submit
+        ephemeral keys and owners query it for them. Senders deploy stealth wallets
+        with funds and computed codes. Owners send proofs to stealth wallets,
+        which interact with the verifier.
+
+
 
 \section{Conclusion and Future Work}
-To sum up, it was demonstrated that a combination of Machine Learning algorithms and an arbitrage trading strategy between cryptocurrency exchanges can provide interesting outcomes. Multiple Machine Learning models with multiple parameters were tested. Random Forest with a 5-minute time interval provided the best result for both considered cryptocurrency pairs, namely BTCUSDT and ETHUSDT. Both approaches to arbitrage trading with and without the inclusion of Machine Learning algorithms were tested and provided profitable results. The key novelty of the study is precisely the demonstration of the profitability of the prediction of exploitable arbitrage one-time interval beforehand, making it a valuable resource to outrun the rivals represented by an increasing number of existing arbitrage bots.
-
-Furthermore, to obtain the maximal relationships from the datasets, the possibility of arbitrage occurrence appended to the dataset could be replaced by an actual observation of whether trades leading to arbitrage were executed by obtaining a historical order book from the involved cryptocurrency exchanges. Such an analysis of data could lead to more precise results, even in volatile crypto markets. The inclusion of less-known, more unstable currencies could also influence the results due to the more frequent occurrence of arbitrage possibilities, however, making it harder to predict exploitable arbitrages. Lastly, the implementation of more complex neural networks could be beneficial for the revelation of the relationships between the features in the datasets.
 
 \begin{thebibliography}{00}
     \bibitem{goldreich1991proofs} O. Goldreich, S. Micali, and A. Wigderson, “Proofs that yield nothing but their validity or all languages in NP have zero-knowledge proof systems,” Journal of the ACM (JACM), vol. 38, no. 3, pp. 690–728, 1991.
@@ -466,6 +502,7 @@ Furthermore, to obtain the maximal relationships from the datasets, the possibil
     \bibitem{SassonIOPs} E. Ben-Sasson, A. Chiesa, and N. Spooner, Interactive Oracle Proofs. Cryptology ePrint Archive, Paper 2016/116, 2016. [Online]. Available: https://eprint.iacr.org/2016/116
     \bibitem{umbra} Umbra — app.umbra.cash. https://app.umbra.cash/. [Online]. Available: https://app.umbra.cash/
     \bibitem{nocturne} Nocturne — nocturne.xyz. https://nocturne.xyz/. [Online]. Available: https://nocturne.xyz/
+    \bibitem{circom} Circom 2 Documentation — docs.circom.io. https://docs.circom.io/. [Online]. Available: https://docs.circom.io/
 
 \end{thebibliography}
 
